--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
   "proxy": "http://localhost:3001",
   "devDependencies": {
     "babel-plugin-import": "^1.6.3",
+    "eslint": "^4.14.0",
+    "eslint-plugin-react": "^7.5.1",
     "react-app-rewired": "^1.4.0"
   }
 }
