--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "antd": "^3.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-icons": "^2.2.7",
     "react-scripts": "1.0.17"
   },
   "scripts": {
