--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17"
   },
   "scripts": {
@@ -15,6 +16,9 @@
     "test": "react-app-rewired test --env=jsdom"
   },
   "proxy": "http://localhost:3001",
+  "eslintConfig": {
+    "extends": "../.eslintrc.js"
+  },
   "devDependencies": {
     "babel-plugin-import": "^1.6.3",
     "eslint": "^4.14.0",
