--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,9 @@
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
   },
+  "eslintConfig": {
+    "extends": "../.eslintrc.js"
+  },
   "devDependencies": {
     "eslint": "^4.14.0",
     "eslint-plugin-react": "^7.5.1"
