--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.6.3",
-    "eslint": "^4.14.0",
+    "eslint": "^4.15.0",
+    "eslint-plugin-jest": "^21.6.2",
     "eslint-plugin-react": "^7.5.1",
     "react-app-rewired": "^1.4.0"
   }
