--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "eslint": "^4.14.0",
+    "eslint-plugin-jest": "^21.6.2",
     "eslint-plugin-react": "^7.5.1"
   }
 }
