--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "NODE_PATH=src nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "eslint": "^4.14.0",
     "eslint-plugin-jest": "^21.6.2",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "nodemon": "^1.14.11"
   }
 }
