--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start-db": "docker-compose up -d mongo-express",
-    "start": "NODE_PATH=src nodemon ./bin/www"
+    "start": "NODE_PATH=src nodemon ./bin/www",
+    "tradfri-auth": "./bin/tradfri authenticate"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
@@ -13,7 +14,6 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
-    "jade": "~1.11.0",
     "mongoose": "^5.0.1",
     "morgan": "~1.9.0",
     "node-tradfri-client": "^0.6.0",
