--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
+    "immutable": "^3.8.2",
     "mongoose": "^5.0.1",
     "morgan": "~1.9.0",
     "node-tradfri-client": "^0.6.0",
