--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start-db": "docker-compose up -d mongo-express",
     "start": "NODE_PATH=src nodemon ./bin/www",
-    "tradfri-auth": "./bin/tradfri authenticate"
+    "tradfri-auth": "./bin/tradfri authenticate",
+    "tradfri-discover": "./bin/tradfri discover"
   },
   "dependencies": {
     "bluebird": "^3.5.1",
@@ -17,7 +18,7 @@
     "immutable": "^3.8.2",
     "mongoose": "^5.0.1",
     "morgan": "~1.9.0",
-    "node-tradfri-client": "^0.6.0",
+    "node-tradfri-client": "^1.0.1",
     "ramda": "^0.25.0",
     "serve-favicon": "~2.4.5",
     "winston": "^2.4.0"
