--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,16 @@
   "private": true,
   "dependencies": {
     "antd": "^3.1.0",
+    "ramda": "^0.25.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "NODE_PATH=src react-app-rewired start",
@@ -22,7 +27,7 @@
   "devDependencies": {
     "babel-plugin-import": "^1.6.3",
     "eslint": "^4.15.0",
-    "eslint-plugin-jest": "^21.6.2",
+    "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-react": "^7.5.1",
     "react-app-rewired": "^1.4.0"
   }
