--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start-db": "docker-compose up -d mongo-express",
-    "start": "NODE_PATH=src nodemon ./bin/www",
+    "start": "NODE_PATH=src PORT=3001 nodemon ./bin/www",
     "tradfri-auth": "./bin/tradfri authenticate",
     "tradfri-discover": "./bin/tradfri discover"
   },
@@ -18,7 +18,7 @@
     "immutable": "^3.8.2",
     "mongoose": "^5.0.1",
     "morgan": "~1.9.0",
-    "node-tradfri-client": "^1.0.1",
+    "node-tradfri-client": "^1.2.1",
     "ramda": "^0.25.0",
     "serve-favicon": "~2.4.5",
     "winston": "^2.4.0"
