--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.6.5",
     "mdi-react": "^4.0.0",
+    "normalizr": "^3.2.4",
     "ramda": "^0.25.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
