--- a/.editorconfig
+++ b/.editorconfig
@@ -13,3 +13,8 @@ insert_final_newline = true
 indent_style = space
 indent_size = 4
 charset = utf-8
+
+[*.json]
+indent_style = space
+indent_size = 2
+charset = utf-8
