--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "start": "NODE_PATH=src react-app-rewired start",
     "build": "NODE_PATH=src react-app-rewired build",
+    "mock-api": "json-server --port 3001 --watch test/mock/db.json --routes test/mock/routes.json",
     "test": "NODE_PATH=src:test react-app-rewired test --env=jsdom"
   },
   "proxy": "http://localhost:3001",
@@ -30,6 +31,7 @@
     "eslint": "^4.15.0",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-react": "^7.5.1",
+    "json-server": "^0.14.0",
     "react-app-rewired": "^1.4.0"
   }
 }
