Renamed project to narrow scope to just trådfri devices

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smart-home-panel-client",
+  "name": "tradfri-control-panel-client",
   "version": "0.0.1",
   "private": true,
   "dependencies": {
