--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,10 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "NODE_PATH=src react-app-rewired start",
-    "build": "NODE_PATH=src react-app-rewired build",
+    "start": "cross-env NODE_PATH=src react-app-rewired start",
+    "build": "cross-env NODE_PATH=src react-app-rewired build",
     "mock-api": "node test/mock/server.js",
-    "test": "NODE_PATH=src:test react-app-rewired test --env=jsdom"
+    "test": "cross-env NODE_PATH=src:test react-app-rewired test --env=jsdom"
   },
   "proxy": "http://localhost:3001",
   "eslintConfig": {
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.6.3",
+    "cross-env": "^5.2.0",
     "eslint": "^4.15.0",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-react": "^7.5.1",
