--- a/ecosystem.deploy.json.template
+++ b/ecosystem.deploy.json.template
@@ -1,11 +1,11 @@
 {
   "deploy": {
     "production": {
-      "host": "localhost",
+      "host": "CHANGEME",
       "repo": "https://github.com/sipe90/tradfri-control-panel.git",
       "ref": "origin/master",
       "path": "/var/tradfri-control-panel",
-      "post-deploy": "npm i && npm run build && pm2 startOrRestart ecosystem.json --env production"
+      "post-deploy": "npm i && npm run build && pm2 startOrRestart ecosystem.json"
     }
   }
 }
