--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 version: 2
 jobs:
   checkout:
+    docker:
+      - image: circleci/classic:latest
     working_directory: ~/project
     steps:
       - checkout
