--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   checkout:
     docker:
-      - image: circleci/classic:latest
+      - image: circleci/node:8.9.4
     working_directory: ~/project
     steps:
       - checkout
