--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ .Branch }}-{{ checksum "package.json" }}
+          key: dependencies-{{ .Branch }}-{{ checksum "package.json" }}
       - run: npm run build
   build:
     docker:
