--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
           keys:
           - repo-{{ .Environment.CIRCLE_SHA1 }}
       - run: echo $DEPLOY_FILE | base64 --decode > ecosystem.deploy.json
-      - run: npm install -g pm2
+      - run: sudo npm install -g pm2
       - run: pm2 deploy ecosystem.deploy.json production
 workflows:
   version: 2
@@ -70,12 +70,16 @@ workflows:
           requires:
            - build
           filters:
+            branches:
+              ignore: /.*/
             tags:
               only: /^v.*/
       - deploy:
           requires:
             - hold
           filters:
+            branches:
+              ignore: /.*/
             tags:
               only: /^v.*/
 
