--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
           - repo-{{ .Environment.CIRCLE_SHA1 }}
       - run: echo $DEPLOY_FILE | base64 --decode > ecosystem.deploy.json
       - run: sudo npm install -g pm2
-      - run: pm2 deploy ecosystem.deploy.json production
+      - run: pm2 deploy ecosystem.deploy.json production ref $CIRCLE_TAG
 workflows:
   version: 2
   build:
