--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,11 +60,9 @@ jobs:
     steps:
       - attach_workspace:
           at: *workdir_node8
-      - restore_cache:
-          keys:
-          - repo-{{ .Environment.CIRCLE_SHA1 }}
       - run: echo $DEPLOY_FILE | base64 --decode > ecosystem.deploy.json
       - run: sudo npm install -g pm2
+      - run: git status
       - run: pm2 deploy ecosystem.deploy.json production ref $CIRCLE_TAG
 workflows:
   version: 2
