--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,17 +18,18 @@ only_tags: &only_tags
       ignore: /.*/
 
 # Items to persist from workspace
-#whitelist: &whitelist
-#  paths:
-#    - node_modules/*
-#    - bin/*
-#    - src/*
-#    - test/*
-#    - public/*
-#    - package.json
-#    - .eslintrc.js
-#    - webpack.config.js
-#    - .babelrc
+whitelist: &whitelist
+  paths:
+    - .git/*
+    - node_modules/*
+    - bin/*
+    - src/*
+    - test/*
+    - public/*
+    - package.json
+    - .eslintrc.js
+    - webpack.config.js
+    - .babelrc
 
 version: 2
 jobs:
@@ -48,7 +49,7 @@ jobs:
           key: dependencies-node_10.14-{{ .Branch }}-{{ checksum "package.json" }}
       - persist_to_workspace:
           root: *workdir_node10
-          #<<: *whitelist
+          <<: *whitelist
   build:
     <<: *node10
     steps:
@@ -63,7 +64,7 @@ jobs:
       - run: echo $DEPLOY_FILE | base64 --decode > ecosystem.deploy.json
       - run: sudo npm install -g pm2
       - run: ls -al
-      - run: pm2 deploy ecosystem.deploy.json production ref $CIRCLE_TAG
+      - run: pm2 deploy ecosystem.deploy.json production ref $CIRCLE_TAG --force
 workflows:
   version: 2
   build_deploy:
