--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_PATH=src/server node src/server/app.js",
+    "start": "cross-env NODE_PATH=src/server ts-node src/server/app.ts",
     "build": "webpack --mode production",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot --host 0.0.0.0",
-    "server": "cross-env NODE_PATH=src/server nodemon src/server/app.js --host 0.0.0.0",
+    "server": "cross-env NODE_PATH=src/server nodemon --host 0.0.0.0",
     "mock-api": "node test/client/mock/server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "dev-mock": "concurrently \"npm run mock-api\" \"npm run client\"",
@@ -15,17 +15,16 @@
   },
   "dependencies": {
     "antd": "^3.9.2",
-    "bluebird": "^3.5.2",
-    "body-parser": "~1.18.3",
+    "body-parser": "^1.18.3",
     "config": "^2.0.1",
-    "cookie-parser": "~1.4.3",
-    "debug": "~3.1.0",
-    "express": "^4.16.3",
+    "cookie-parser": "^1.4.3",
+    "debug": "^3.1.0",
+    "express": "^4.16.4",
     "mdi-react": "^4.3.0",
-    "morgan": "~1.9.1",
-    "node-tradfri-client": "^1.3.4",
+    "morgan": "^1.9.1",
+    "node-tradfri-client": "^1.5.0",
     "normalizr": "^3.2.4",
-    "ramda": "^0.25.0",
+    "ramda": "^0.26.1",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
@@ -44,6 +43,11 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/config": "0.0.34",
+    "@types/cookie-parser": "^1.4.1",
+    "@types/express": "^4.16.0",
+    "@types/morgan": "^1.7.35",
+    "@types/ramda": "^0.25.44",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.2",
     "babel-plugin-import": "^1.8.0",
@@ -62,6 +66,8 @@
     "nodemon": "^1.18.7",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "^0.23.0",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.2.2",
     "url-loader": "^1.1.1",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
