WIP: Migrating front-end code to TS

--- a/package.json
+++ b/package.json
@@ -48,6 +48,13 @@
     "@types/express": "^4.16.0",
     "@types/morgan": "^1.7.35",
     "@types/ramda": "^0.25.44",
+    "@types/react": "^16.7.18",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^6.0.11",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/react-sticky": "^6.0.2",
+    "@types/redux-form": "^7.4.13",
+    "@types/redux-logger": "^3.0.6",
     "babel-eslint": "^9.0.0",
     "babel-loader": "^8.0.2",
     "babel-plugin-import": "^1.8.0",
@@ -66,6 +73,7 @@
     "nodemon": "^1.18.7",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "^0.23.0",
+    "ts-loader": "^5.3.2",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2",
     "url-loader": "^1.1.1",
