--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -2,11 +2,11 @@
     "compilerOptions": {
       /* Basic Options */
       "target": "es2018",                       /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017','ES2018' or 'ESNEXT'. */
-      "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
-      // "lib": [],                             /* Specify library files to be included in the compilation. */
+      "module": "commonjs",                       /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
+      "lib": ["es2018", "dom"],                           /* Specify library files to be included in the compilation. */
       // "allowJs": true,                       /* Allow javascript files to be compiled. */
       // "checkJs": true,                       /* Report errors in .js files. */
-      // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
+      "jsx": "react",                           /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
       // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
       // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
       // "sourceMap": true,                     /* Generates corresponding '.map' file. */
@@ -43,8 +43,14 @@
         "*": [
           "*",
           "../../node_modules/*"
+        ],
+        "shared/*": [
+          "../shared/*"
+        ],
+        "public/*": [
+          "../../public/*",
         ]
-      },                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
+      },                             /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
       // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
       // "typeRoots": [],                       /* List of folders to include type definitions from. */
       // "types": [],                           /* Type declaration files to be included in compilation. */
