--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "build": "webpack --mode production",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot --host 0.0.0.0",
     "server": "cross-env NODE_PATH=src/server nodemon --host 0.0.0.0",
-    "mock-api": "node test/client/mock/server.js",
+    "mock-api": "node mock/server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "dev-mock": "concurrently \"npm run mock-api\" \"npm run client\"",
+    "test:client": "jest",
     "tradfri-auth": "cross-env NODE_PATH=src/server ./bin/tradfri.js authenticate",
     "tradfri-discover": "cross-env NODE_PATH=src/server ./bin/tradfri.js discover"
   },
@@ -46,6 +47,7 @@
     "@types/config": "0.0.34",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
+    "@types/jest": "^23.3.10",
     "@types/morgan": "^1.7.35",
     "@types/ramda": "^0.25.44",
     "@types/react": "^16.7.18",
@@ -69,13 +71,15 @@
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.6.0",
     "json-server": "^0.14.0",
     "nodemon": "^1.18.7",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "^0.23.0",
+    "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.2",
     "ts-node": "^7.0.1",
-    "typescript": "^3.2.2",
+    "typescript": "3.1.6",
     "url-loader": "^1.1.1",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
