--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ end_of_line = lf
 insert_final_newline = true
 
 # 4 space indentation
-[*.js, *.jsx, *.json]
+[*.js, *.ts, *.tsx]
 indent_style = space
 indent_size = 4
 charset = utf-8
