--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "tradfri-auth": "cross-env NODE_PATH=src/server ./bin/tradfri.js authenticate",
     "tradfri-discover": "cross-env NODE_PATH=src/server ./bin/tradfri.js discover"
   },
+  "_moduleAliases": {
+    "#": "./src/server"
+  },
   "dependencies": {
     "antd": "^3.9.2",
     "body-parser": "^1.18.3",
@@ -22,6 +25,7 @@
     "debug": "^3.1.0",
     "express": "^4.16.4",
     "mdi-react": "^4.3.0",
+    "module-alias": "^2.1.0",
     "morgan": "^1.9.1",
     "node-tradfri-client": "^1.5.0",
     "normalizr": "^3.2.4",
@@ -76,9 +80,12 @@
     "nodemon": "^1.18.7",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "^0.23.0",
+    "ts-import-plugin": "^1.5.5",
     "ts-jest": "^23.10.5",
     "ts-loader": "^5.3.2",
     "ts-node": "^7.0.1",
+    "tslint": "^5.12.0",
+    "tslint-react": "^3.6.0",
     "typescript": "3.1.6",
     "url-loader": "^1.1.1",
     "webpack": "^4.17.2",
