--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.2.0",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_PATH=src/server ts-node src/server/app.ts",
+    "start": "./src/server/app.ts",
     "build": "webpack --mode production",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot --host 0.0.0.0",
-    "server": "cross-env NODE_PATH=src/server nodemon --host 0.0.0.0",
+    "server": "nodemon --host 0.0.0.0",
     "mock-api": "node mock/server.js",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "dev-mock": "concurrently \"npm run mock-api\" \"npm run client\"",
-    "test:client": "jest",
-    "tradfri-auth": "cross-env NODE_PATH=src/server ./bin/tradfri.js authenticate",
-    "tradfri-discover": "cross-env NODE_PATH=src/server ./bin/tradfri.js discover"
+    "dev": "concurrently 'npm run server' 'npm run client'",
+    "dev-mock": "concurrently 'npm run mock-api' 'npm run client'",
+    "test": "jest",
+    "tradfri-auth": "./bin/tradfri.ts authenticate",
+    "tradfri-discover": "./bin/tradfri.ts discover"
   },
   "_moduleAliases": {
-    "#": "./src/server"
+    "#": "./src/server",
+    "shared": "./src/shared"
   },
   "dependencies": {
     "antd": "^3.9.2",
@@ -48,9 +49,11 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@types/clean-webpack-plugin": "^0.1.2",
     "@types/config": "0.0.34",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
+    "@types/html-webpack-plugin": "^3.2.0",
     "@types/jest": "^23.3.10",
     "@types/morgan": "^1.7.35",
     "@types/ramda": "^0.25.44",
@@ -61,18 +64,13 @@
     "@types/react-sticky": "^6.0.2",
     "@types/redux-form": "^7.4.13",
     "@types/redux-logger": "^3.0.6",
-    "babel-eslint": "^9.0.0",
+    "@types/webpack": "^4.4.22",
+    "@types/webpack-dev-server": "^3.1.1",
     "babel-loader": "^8.0.2",
     "babel-plugin-import": "^1.8.0",
     "clean-webpack-plugin": "^0.1.19",
     "concurrently": "^4.0.1",
-    "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "eslint": "^5.5.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^21.22.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
