--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --mode production",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot --host 0.0.0.0",
     "server": "nodemon --host 0.0.0.0",
-    "mock-api": "node mock/server.js",
+    "mock-api": "./mock/server.ts",
     "dev": "concurrently 'npm run server' 'npm run client'",
     "dev-mock": "concurrently 'npm run mock-api' 'npm run client'",
     "test": "jest",
@@ -55,6 +55,7 @@
     "@types/express": "^4.16.0",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/jest": "^23.3.10",
+    "@types/json-server": "^0.14.0",
     "@types/morgan": "^1.7.35",
     "@types/ramda": "^0.25.44",
     "@types/react": "^16.7.18",
