--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,12 @@ jobs:
       - persist_to_workspace:
           root: *workdir_node10
           <<: *whitelist
+  test:
+    <<: *node10
+    steps:
+      - attach_workspace:
+          at: *workdir_node10
+      - run: npm test
   build:
     <<: *node10
     steps:
@@ -68,9 +74,11 @@ jobs:
       - run: pm2 deploy ecosystem.deploy.json production ref $CIRCLE_TAG --force
 workflows:
   version: 2
-  build_deploy:
+  test_build_deploy:
     jobs:
       - install:
+          <<: *tags_and_branches
+      - test:
           <<: *tags_and_branches
       - build:
           <<: *tags_and_branches
