--- a/ecosystem.deploy.json.template
+++ b/ecosystem.deploy.json.template
@@ -7,10 +7,7 @@
       "ref": "origin/master",
       "path": "/var/tradfri-control-panel",
       "ssh_options": "StrictHostKeyChecking=no",
-      "post-deploy": "npm i && npm run build && pm2 startOrRestart ecosystem.json",
-      "env": {
-        "NODE_ENV": "production"
-      }
+      "post-deploy": "npm i && npm run build && pm2 startOrRestart ecosystem.json"
     }
   }
 }
