--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
     "express": "^4.16.4",
+    "lokijs": "^1.5.6",
     "mdi-react": "^4.3.0",
     "module-alias": "^2.1.0",
     "morgan": "^1.9.1",
@@ -54,6 +55,7 @@
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/jest": "^23.3.10",
     "@types/json-server": "^0.14.0",
+    "@types/lokijs": "^1.5.2",
     "@types/morgan": "^1.7.35",
     "@types/ramda": "^0.25.44",
     "@types/react": "^16.7.18",
