--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ whitelist: &whitelist
     - webpack.config.ts
     - tsconfig.json
     - jest.config.js
+    - ecosystem.config.js
 
 version: 2
 jobs:
@@ -69,9 +70,8 @@ jobs:
     steps:
       - attach_workspace:
           at: *workdir_node10
-      - run: echo $DEPLOY_FILE | base64 --decode > ecosystem.deploy.json
       - run: sudo npm install -g pm2
-      - run: pm2 deploy ecosystem.deploy.json production ref origin/$CIRCLE_TAG --force
+      - run: DEPLOY_BRANCH=$CIRCLE_TAG pm2 deploy production --force
 workflows:
   version: 2
   test_build_deploy:
