--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "suncalc": "^1.8.0",
-    "winston": "^3.1.0"
+    "winston": "^3.1.0",
+    "ws": "^6.1.4"
   },
   "devDependencies": {
     "@types/clean-webpack-plugin": "^0.1.2",
@@ -65,6 +66,7 @@
     "@types/redux-logger": "^3.0.6",
     "@types/webpack": "^4.4.22",
     "@types/webpack-dev-server": "^3.1.1",
+    "@types/ws": "^6.0.1",
     "clean-webpack-plugin": "^0.1.19",
     "concurrently": "^4.0.1",
     "css-loader": "^1.0.0",
