Added test job as requirement for confirm_deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,6 +91,7 @@ workflows:
           type: approval
           requires:
            - build
+           - test
       - deploy:
           <<: *only_tags
           requires:
