--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "morgan": "^1.9.1",
     "node-tradfri-client": "^1.5.0",
     "ramda": "^0.26.1",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
-    "react-redux": "^6.0.0",
-    "react-router-dom": "^4.3.1",
+    "react": "16.8.6",
+    "react-dom": "16.8.6",
+    "react-redux": "^7.0.3",
+    "react-router-dom": "^5.0.0",
     "react-sticky": "^6.0.3",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
@@ -55,13 +55,13 @@
     "@types/lokijs": "^1.5.2",
     "@types/morgan": "^1.7.35",
     "@types/ramda": "^0.25.44",
-    "@types/react": "^16.7.18",
-    "@types/react-dom": "^16.0.11",
-    "@types/react-redux": "^6.0.11",
-    "@types/react-router-dom": "^4.3.1",
+    "@types/react": "^16.8.18",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-redux": "^7.0.9",
+    "@types/react-router-dom": "^4.3.3",
     "@types/react-sticky": "^6.0.2",
-    "@types/redux-form": "^7.4.16",
-    "@types/redux-logger": "^3.0.6",
+    "@types/redux-form": "^8.1.1",
+    "@types/redux-logger": "^3.0.7",
     "@types/suncalc": "^1.8.0",
     "@types/webpack": "^4.4.22",
     "@types/webpack-dev-server": "^3.1.1",
