--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "shared": "./src/shared"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "antd": "^4.7.0",
     "body-parser": "^1.19.0",
     "config": "^3.3.2",
@@ -40,6 +41,7 @@
     "redux-form": "^8.3.6",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.2.0",
     "suncalc": "^1.8.0",
     "winston": "^3.3.3",
     "ws": "^7.3.1"
