Added start and build scripts to root project

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     ]
   },
   "scripts": {
+    "start": "yarn --cwd server start",
+    "build": "yarn --cwd client build",
     "dev": "concurrently 'yarn --cwd server run dev' 'yarn --cwd client run dev'",
     "dev-mock": "concurrently 'yarn --cwd server run mock' 'yarn --cwd client run dev'",
     "tradfri-auth": "ts-node bin/tradfri.ts authenticate",
