--- a/client/package.json
+++ b/client/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@tradfri-control-panel/client",
-  "version": "0.6.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "build": "webpack --mode production",
-    "dev": "webpack serve --mode development --devtool inline-source-map --hot --host 0.0.0.0",
+    "dev": "webpack-dev-server --mode development --devtool inline-source-map --hot --host 0.0.0.0",
     "test": "jest"
   },
   "dependencies": {
@@ -34,22 +34,18 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/react-sticky": "^6.0.3",
     "@types/redux-logger": "^3.0.8",
-    "@types/webpack": "^4.41.22",
+    "@types/webpack": "^4.41.23",
     "@types/webpack-dev-server": "^3.11.0",
     "clean-webpack-plugin": "^3.0.0",
-    "concurrently": "^5.3.0",
     "css-loader": "^5.0.0",
     "file-loader": "^6.1.1",
-    "html-webpack-plugin": "next",
-    "jest": "^26.5.3",
+    "html-webpack-plugin": "^4.5.0",
     "style-loader": "^2.0.0",
     "ts-import-plugin": "^1.6.6",
-    "ts-jest": "^26.4.1",
     "ts-loader": "^8.0.5",
-    "typescript": "4.0.3",
     "url-loader": "^4.1.1",
-    "webpack": "^5.2.0",
-    "webpack-cli": "^4.1.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
 }
