--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "packages": [
       "client",
       "server",
+      "mock",
       "shared"
     ],
     "nohoist": [
@@ -16,13 +17,16 @@
     "start": "yarn --cwd server start",
     "build": "yarn --cwd client build",
     "dev": "concurrently 'yarn --cwd server run dev' 'yarn --cwd client run dev'",
-    "dev-mock": "concurrently 'yarn --cwd server run mock' 'yarn --cwd client run dev'",
+    "dev:mock": "concurrently 'yarn --cwd mock run dev' 'yarn --cwd client run dev'",
     "tradfri-auth": "ts-node bin/tradfri.ts authenticate",
     "tradfri-discover": "ts-node bin/tradfri.ts discover"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
     "typescript": "4.0.3",
-    "node-tradfri-client": "^2.1.6"
+    "node-tradfri-client": "^2.1.6",
+    "ts-node": "^9.0.0",
+    "jest": "^26.5.3",
+    "ts-jest": "^26.4.1"
   }
 }
