--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@tradfri-control-panel/server",
-  "version": "0.6.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "ts-node src/app.ts",
+    "build": "tsc",
+    "start": "node dist/src/app.js",
     "dev": "nodemon",
-    "mock": "ts-node mock/server.ts",
     "test": "jest"
   },
   "_moduleAliases": {
-    "#": "src"
+    "#": "dist/src"
   },
   "dependencies": {
     "@tradfri-control-panel/shared": "1.0.0",
@@ -31,18 +31,11 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.14",
-    "@types/json-server": "^0.14.2",
     "@types/lokijs": "^1.5.3",
     "@types/morgan": "^1.9.1",
     "@types/ramda": "^0.27.29",
     "@types/suncalc": "^1.8.0",
     "@types/ws": "^7.2.7",
-    "concurrently": "^5.3.0",
-    "jest": "^26.5.3",
-    "json-server": "^0.16.2",
-    "nodemon": "^2.0.5",
-    "ts-jest": "^26.4.1",
-    "ts-node": "^9.0.0",
-    "typescript": "4.0.3"
+    "nodemon": "^2.0.6"
   }
 }
