Removed ts build info from version control

--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,16 @@ node_modules
 
 # production
 dist
+/server/public
 
 # data
 /server/data/*
 
 # pm2 deployment
 ecosystem.deploy.json
+
+# TS build info
+.tsbuildinfo
 
 # misc
 .DS_Store
