--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -2,9 +2,7 @@
   "compilerOptions": {
     "target": "es2020",
     "module": "commonjs",
-    "lib": [
-      "es2020"
-    ],
+    "lib": [],
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
