--- a/mock/tsconfig.json
+++ b/mock/tsconfig.json
@@ -1,15 +1,10 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
     "target": "es2020",
-    "module": "commonjs",
     "lib": [],
     "outDir": "dist",
     "rootDir": ".",
-    "strict": true,
-    "noImplicitAny": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "baseUrl": "src",
-    "esModuleInterop": true
+    "baseUrl": "src"
   }
 }
