Added test scripts to parent package.json

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "build": "yarn run build:client && yarn run build:server",
     "build:client": "yarn --cwd client build",
     "build:server": "yarn --cwd server build",
+    "test": "yarn run test:client && yarn run test:server",
+    "test:client": "yarn --cwd client test",
+    "test:server": "yarn --cwd server test",
     "start": "yarn --cwd server start",
     "dev": "concurrently 'yarn --cwd server run dev' 'yarn --cwd client run dev'",
     "dev:mock": "concurrently 'yarn --cwd mock run dev' 'yarn --cwd client run dev'",
