--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,10 +6,13 @@
     "module": "commonjs",
     "outDir": "dist",
     "rootDir": ".",
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
       "#/*": [
-        "./*"
+        "./src/*"
+      ],
+      "@tradfri-control-panel/shared": [
+        "../shared/src"
       ]
     }
   },
