--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,6 @@
     "noImplicitAny": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "esModuleInterop": true,
-    "baseUrl": ".",
-    "paths": {
-      "@tradfri-control-panel/*": [
-        "*/src"
-      ]
-    }
+    "esModuleInterop": true
   }
 }
