--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "target": "es2020",
-    "lib": [],
+    "target": "es2019",
+    "lib": [
+      "es2019"
+    ],
     "module": "commonjs",
     "outDir": "dist",
     "rootDir": ".",
