--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "target": "es2020",
-    "lib": [],
+    "target": "es2019",
+    "lib": [
+      "es2019"
+    ],
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
