--- a/mock/package.json
+++ b/mock/package.json
@@ -15,7 +15,6 @@
     "@types/express": "^4.17.8",
     "@types/json-server": "^0.14.2",
     "json-server": "^0.16.2",
-    "nodemon": "^2.0.5",
-    "typescript": "4.0.3"
+    "nodemon": "^2.0.5"
   }
 }
