Removed parent project name from workspaces

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,7 +13,7 @@
       "#/*": [
         "./src/*"
       ],
-      "@tradfri-control-panel/shared": [
+      "shared": [
         "../shared/src"
       ]
     }
