--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     ]
   },
   "scripts": {
-    "build": "yarn run build:client && yarn run build:server",
-    "build:client": "yarn --cwd client build",
-    "build:server": "yarn --cwd server build",
-    "test": "yarn run test:client && yarn run test:server",
-    "test:client": "yarn --cwd client test",
-    "test:server": "yarn --cwd server test",
-    "start": "yarn --cwd server start",
-    "dev": "concurrently 'yarn --cwd server run dev' 'yarn --cwd client run dev'",
-    "dev:mock": "concurrently 'yarn --cwd mock run dev' 'yarn --cwd client run dev'",
+    "build": "yarn build:client && yarn build:server",
+    "build:client": "yarn workspace client build",
+    "build:server": "yarn workspace server build",
+    "test": "yarn test:client && yarn test:server",
+    "test:client": "yarn workspace client test",
+    "test:server": "yarn workspace server test",
+    "start": "yarn workspace server start",
+    "dev": "concurrently 'yarn workspace server run dev' 'yarn workspace client run dev'",
+    "dev:mock": "concurrently 'yarn workspace mock run dev' 'yarn workspace client run dev'",
     "tradfri-auth": "ts-node bin/tradfri.ts authenticate",
     "tradfri-discover": "ts-node bin/tradfri.ts discover"
   },
