--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -12,7 +12,7 @@
       "#/*": [
         "./src/*"
       ],
-      "@tradfri-control-panel/shared": [
+      "shared": [
         "../shared/src"
       ]
     }
