--- a/shared/package.json
+++ b/shared/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@tradfri-control-panel/shared",
+  "name": "shared",
   "version": "1.0.0",
   "private": true,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "test": "jest"
+    "build": "tsc"
   }
 }
