--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tradfri-control-panel/client",
+  "name": "client",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
-    "@tradfri-control-panel/shared": "1.0.0",
+    "shared": "1.0.0",
     "antd": "^4.7.0",
     "mdi-react": "^7.3.0",
     "ramda": "^0.27.1",
