--- a/mock/package.json
+++ b/mock/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tradfri-control-panel/mock-api",
+  "name": "mock-api",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,7 @@
     "dev": "nodemon"
   },
   "dependencies": {
-    "@tradfri-control-panel/shared": "1.0.0",
+    "shared": "1.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
