--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tradfri-control-panel/server",
+  "name": "server",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
     "#": "dist/src"
   },
   "dependencies": {
-    "@tradfri-control-panel/shared": "1.0.0",
+    "shared": "1.0.0",
     "body-parser": "^1.19.0",
     "config": "^3.3.2",
     "cookie-parser": "^1.4.5",
