Updated yarn to version 2

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@
 # IDE
 /.vscode
 
+# yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+
 # dependencies
 node_modules
 
