--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mock-api",
+  "name": "mock-server",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,8 @@
     "dev": "nodemon"
   },
   "dependencies": {
-    "shared": "1.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "shared": "1.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
