--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "packages": [
       "client",
       "server",
-      "mock",
+      "mock-server",
       "shared"
     ],
     "nohoist": [
@@ -22,16 +22,16 @@
     "test:server": "yarn workspace server test",
     "start": "yarn workspace server start",
     "dev": "concurrently 'yarn workspace server run dev' 'yarn workspace client run dev'",
-    "dev:mock": "concurrently 'yarn workspace mock run dev' 'yarn workspace client run dev'",
+    "dev:mock": "concurrently 'yarn workspace mock-server run dev' 'yarn workspace client run dev'",
     "tradfri-auth": "ts-node bin/tradfri.ts authenticate",
     "tradfri-discover": "ts-node bin/tradfri.ts discover"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "typescript": "4.0.5",
-    "node-tradfri-client": "^2.1.6",
-    "ts-node": "^9.0.0",
     "jest": "^26.5.3",
-    "ts-jest": "^26.4.1"
+    "node-tradfri-client": "^2.1.6",
+    "ts-jest": "^26.4.1",
+    "ts-node": "^9.0.0",
+    "typescript": "4.0.5"
   }
 }
