--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": [
       "es2020"
     ],
+    "module": "commonjs",
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
